--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
   
           <div class="row p-2">
             <p class="text-wrap text-white" style="text-align: left;text-indent: 40px;">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3011.341231481058!2d120.98892447376389!3d14.601827577049287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9f9208f7369%3A0xecda96ca6a603f5b!2sThe%20University%20of%20Manila!5e1!3m2!1sen!2sph!4v1725865305360!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </p>
         </div>
        
